<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin">

    <Button
        android:id="@+id/addResident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <Button
        android:id="@+id/changeResident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addResident"
        app:layout_constraintVertical_bias="0.151" />

    <Button
        android:id="@+id/visitList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeResident"
        app:layout_constraintVertical_bias="0.223" />

    <Button
        android:id="@+id/residentList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visitList"
        app:layout_constraintVertical_bias="0.355" />

    <ImageView
        android:id="@+id/logout_admin"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:contentDescription="@string/Logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/logout" />

</androidx.constraintlayout.widget.ConstraintLayout>